Resolviendo Examen CPU

--- a/1_T.md
+++ b/1_T.md
@@ -7,13 +7,13 @@
 - [ ] B. Un set de instructions SIMD describe el proceso de fabricación de un procesador vectorial
 - [ ] C. Un vector de 4 `float`s tiene un ancho de 16 Bytes
 - [ ] D. Un procesador con soporte AVX512 puede procesar vectores de hasta 512 bits de ancho
-
+RESPUESTA:
 2. Indicar la(s) afirmación(es) correcta(s): [1 punto]
 - [ ] A. Añadiendo el atributo `restrict` (C/C++) a argumentos de funciones permite evitar el _aliasing_
 - [ ] B. La ventaja de usar _instrinsics_ para vectorizar es la alta portabilidad de código
 - [ ] C. El uso de pragmas esta basado en compilar añadiendo opciones como por ejm. `-fno-trapping-math`
 - [ ] D. La sgte. sentencia lee 256 bits de memoria y los asigna a una variable: `__m256d var_v = _mm256_load_pd(&var[i]);`
-
+RESPUESTA:
 3. Indicar la(s) afirmación(es) correcta(s): [1 punto]
 - [ ] A. El componente _linker_ de un compilador permite transformar el código fuente en lenguaje ensamblador
 - [ ] B. La portabilidad del lenguaje ensamblador es limitada
