Resolviendo Examen CPU

--- a/1_T.md
+++ b/1_T.md
@@ -3,20 +3,28 @@
 ## Vectorizacion
 
 1. Indicar la(s) afirmación(es) correcta(s): [1 punto]
-- [ ] A. La longitud de un vector SIMD se expresa en bits o Bytes
+- [X] A. La longitud de un vector SIMD se expresa en bits o Bytes
 - [ ] B. Un set de instructions SIMD describe el proceso de fabricación de un procesador vectorial
 - [ ] C. Un vector de 4 `float`s tiene un ancho de 16 Bytes
 - [ ] D. Un procesador con soporte AVX512 puede procesar vectores de hasta 512 bits de ancho
+
+
 RESPUESTA:
+
+
 2. Indicar la(s) afirmación(es) correcta(s): [1 punto]
-- [ ] A. Añadiendo el atributo `restrict` (C/C++) a argumentos de funciones permite evitar el _aliasing_
+- [X] A. Añadiendo el atributo `restrict` (C/C++) a argumentos de funciones permite evitar el _aliasing_
 - [ ] B. La ventaja de usar _instrinsics_ para vectorizar es la alta portabilidad de código
 - [ ] C. El uso de pragmas esta basado en compilar añadiendo opciones como por ejm. `-fno-trapping-math`
 - [ ] D. La sgte. sentencia lee 256 bits de memoria y los asigna a una variable: `__m256d var_v = _mm256_load_pd(&var[i]);`
+
+
 RESPUESTA:
+
+
 3. Indicar la(s) afirmación(es) correcta(s): [1 punto]
 - [ ] A. El componente _linker_ de un compilador permite transformar el código fuente en lenguaje ensamblador
-- [ ] B. La portabilidad del lenguaje ensamblador es limitada
+- [X] B. La portabilidad del lenguaje ensamblador es limitada
 - [ ] C. La auto-vectorización podría producir un resultado incorrecto
 - [ ] D. Un programa escrito en lenguaje ensamblador es por lo general más extenso que su equivalente en C/C++
 
@@ -37,13 +45,21 @@ exam_cpar2.c: 41:4: note: loop versioned for vectorization because of possible a
 ```
 
 - [ ] A. Usando máximo dos oraciones, explicar cual es el problema.
+
+
+
 - [ ] B. Usando máximo dos oraciones, indicar como solucionar el problema.
+
+
+
+
 
 ## OpenMP
 
 5. Indicar la(s) afirmación(es) correcta(s): [1 punto]
+
 - [ ] A. OpenMP se aplica a sistemas de memoria distribuida
-- [ ] B. OpenMP permite paralelizar un programa usando múltiples hilos (threads)
+- [X] B. OpenMP permite paralelizar un programa usando múltiples hilos (threads)
 - [ ] C. OpenMP requiere soporte hardware pero no del compilador
 - [ ] D. El pragma OpenMP `#pragma omp parallel` distribuye iteraciones de un bucle `for` entre múltiples hilos
 
@@ -51,11 +67,15 @@ exam_cpar2.c: 41:4: note: loop versioned for vectorization because of possible a
 - [ ] A. En OpenMP, el hilo maestro (`master thread`) tiene un `id` variable cuyo valor es asignado durante la ejecución de un programa
 - [ ] B. Respecto a la jerarquía de memoria en un sistema computacional: los niveles de memoria de mayor capacidad tienen accesos más veloces
 - [ ] C. En OpenMP, las variables pueden tener los sgtes tipos de alcance: `private`, `shared`, and `virtual`
-- [ ] D. En OpenMP, cada hilo tiene su propia región de memoria ("stack") donde almacena variables privadas
+- [X] D. En OpenMP, cada hilo tiene su propia región de memoria ("stack") donde almacena variables privadas
 
 7. Indicar la(s) afirmación(es) correcta(s): [1 punto]
 - [ ] A. Indique un método de OpenMP para sincronizar hilos
+
+
 - [ ] B. Indique un método de OpenMP para ejecutar de manera serial
+
+
 - [ ] C. Usando máximo dos oraciones, indique para que sirve `export OMP_NUM_THREADS=8`
 - [ ] D. Usando máximo dos oraciones, explique en que consiste en una condición de carrera de hilos
 
@@ -80,4 +100,11 @@ exam_cpar2.c: 41:4: note: loop versioned for vectorization because of possible a
 ```
 
 - [ ] A. Indicar el alcance de las variables `nthreads` y `thread_id`
+
+Tenemos un hilo nthreads determinado que es menor que el numero de hilos thread_id.
+
+
+
 - [ ] B. Indicar el valor numérico impreso en el stdout de la variable `thread_id` cuando se ejecuta la línea `12`.
+
+El hilo fijo  (x=0,1,2,3,4,5) es mayor.
