--- a/3_E.md
+++ b/3_E.md
@@ -2,6 +2,16 @@
 
 Usando no mas de cuatro oraciones, indicar:
 - De modo concreto: ¿qué es lo más significativo que ha aprendido del curso?
+
+Aprendi que es posible programar usando multiproceso de memoria compartida en diversas plataformas  una de ellas la
+intel devcloud, esto me permite usar concurrencia a los programas que escribo en la carrera de Ingeniería Eléctrica, los cuales 
+tengo escritos en C, C++.
+
+
+
 - ¿En qué situación o proyecto en particular utilizaría tales conocimientos?
 
-
+Entre los proyectos mas importantes cabe mencionar el calculo de flujo de potencia eléctrica,para determinar restricciones y criterios de estabilidad de tension.
+usando metodos como newton Rapshon el proceso de computo para 500 barras es sumamente pesado, este metodo me permite calcular las variaciones de voltajes que
+corren por los circuitos electricos, los cuales se determinan mediante ecuaciones diferenciales desarrolados en leguajes como c, c++,este curso me ayuda
+enormemente el trabajo.
